Skip running jdt.core tests without javac
- Don't bother building ECJ or jdt.core; grab those from the i-builds
- This will save 40-50 minutes in each Jenkins build
- We don't have substantial changes in jdt.core anymore.
  As such, we don't really need to test these changes.

Currently, there are 11 files that are changed:

PatternLocator.java
MatchingNodeSet.java (just whitespace changes)
MatchLocator.java
SourceIndexer.java
DOMToIndexVisitor.java
IJavaSearchDelegate.java (@since changes only)
DOMToModelPopulator.java
org.eclipse.jdt.internal.core.CompilationUnit (formatting changes only)
JavaCore.java (@since changes only)
AST.java (@since changes only)
CompletionEngine.java (make a few methods static)

As noted, only 6 of these files have "real" changes,
and of those, most of them are classes that we introduced upstream that
are only used when running with javac.

Signed-off-by: David Thompson <davthomp@redhat.com>